--- a/index.html
+++ b/index.html
@@ -267,11 +267,20 @@ footer{
 
 /* RESPONSIVO */
 @media (max-width:768px){
-  .hero-box {margin-top: 80px;}
-  .hero h1 {font-size: 2rem;}
-  .hero p {font-size: 1rem;}
-  .whatsapp{animation:whatsPulse 2.6s infinite;} /* botão pulsando no mobile também */
+  .hero-box {
+    margin-top: 50px; /* ajuste o valor conforme quiser: 50px ou 60px para descer mais */
+  }
+  .hero h1 {
+    font-size: 2rem;
+  }
+  .hero p {
+    font-size: 1rem;
+  }
+  .whatsapp {
+    animation: whatsPulse 2.6s infinite; /* botão pulsando no mobile também */
+  }
 }
+
 </style>
 
 <!-- SCHEMA LOCAL -->
