--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@ footer{
 
 /* LOGO */
 .logo-area img{
-  height:60px;
+  height:80px; /* aumentei de 60px para 80px */
 }
 
 /* ÁREA DE CONTATO */
