--- a/index.html
+++ b/index.html
@@ -639,7 +639,11 @@ footer{
 }
 
 
-
+@media (max-width: 1024px) {
+  .hero {
+    background-attachment: scroll; /* desativa o fixed */
+  }
+}
 
 
 
@@ -681,18 +685,18 @@ footer{
 
       <div class="contact-item phone">
         <span class="icon">📞</span>
-        <span>(11) 94478-2518</span>
+        <span>+55 1196730-5327</span>
       </div>
 
       <div class="contact-item email">
         <span class="icon">✉</span>
-        <span>contato@clinicaclari.com.br</span>
+        <span>contato@biomedicamorumbi.com.br</span>
       </div>
 
       <div class="contact-item address">
         <span class="icon">📍</span>
         <span>
-          Rua Pequetita 179, CJ 45 / 46 | Vila Olímpia | São Paulo – SP
+          Rua Dr. Luiz Migliano, nº 1986 | Morumbi Sala 1520 | São Paulo/SP 
         </span>
       </div>
 
