--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ footer{
 
       <div class="contact-item email">
         <span class="icon">✉</span>
-        <span>contato@biomedicamorumbi.com.br</span>
+        <span>luciana@biomedicamorumbi.com.br</span>
       </div>
 
       <div class="contact-item address">
@@ -1210,4 +1210,5 @@ seguindo normas técnicas, Anvisa e Vigilância Sanitária.
 	// ]]>
 </script>
 </body></html>
+
 
